# engine

./: .gitignore  CMakeLists.txt  LICENSE
include/: common.hpp  define.hpp  engine.hpp  entity.hpp  event.hpp  exception.hpp  geometry.hpp  gui.hpp  handler.hpp  interface.hpp  keyboard.hpp  layer.hpp  mouse.hpp  primitive.hpp  scene.hpp  texture.hpp  time.hpp  type.hpp
res/test/texture/rocky_roads/: license.txt
src/: core.cpp  core.hpp  engine.cpp  engine.hpp  event.cpp  event.hpp  exception.cpp  global.cpp  global.hpp  handler.cpp  scene.cpp  time.cpp
src/gui/: font.cpp  text.cpp
src/input/: mouse.cpp
src/manager/: eventManager.cpp  eventManager.hpp  textureManager.cpp  textureManager.hpp
src/menu/: button.cpp
src/objects/: entity.cpp  geometry.cpp  line.cpp  rectangle.cpp  text.cpp
src/renderable/: line.cpp  rectangle.cpp  texture.cpp
src/wrapper/: coreWrapper.cpp  engineWrapper.cpp  entityWrapper.cpp  eventWrapper.cpp  lineWrapper.cpp  mouseWrapper.cpp  rectangleWrapper.cpp
test/: exception.cpp  scene.cpp  texture.cpp  tiling.cpp
